Added comment explaining edition of new tags.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>paystation</name>
   <url>https://maven.apache.org</url>
+  <!-- Overwrite default repositories for Maven bundled with NetBeans 8.2.
+       See https://www.alphabot.com/security/blog/2020/java/Your-Java-builds-might-break-starting-January-13th.html
+       for why this is necessary.
+  -->
   <repositories>
     <repository>
       <id>central</id>
